# CMake_Primer

./: .gitignore  CMakeLists.txt
calc/: CMakeLists.txt
include/: calc.h  sort.h
sort/: CMakeLists.txt  insert.cpp  select.cpp
test1/: CMakeLists.txt  calc.cpp
test2/: CMakeLists.txt  sort.cpp
